--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,13 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    font-size: 4.2rem;
+    color: #fff;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
 p {
     color: whitesmoke;
     font-size: 1.6rem;
@@ -55,6 +62,8 @@ p {
 }
 
 .btn {
+    display: flex;
+    justify-content: center;
     font-size: 2.4rem;
     padding: 2rem 0;
     width: 30rem;
@@ -83,4 +92,43 @@ p {
 
 #highscore-btn:hover {
    box-shadow: 0 0.4rem 1.4rem 0 rgba(255,255,0,0.5); 
+}
+
+/* end page CSS */
+
+.end-form-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30rem;
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.8rem;
+    border: none;
+    box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+}
+
+input::placeholder {
+    color: #aaa;
+}
+
+#username {
+    margin-bottom: 3rem;
+    width: 100%;
+    outline: none;
+}
+
+#end-text {
+    font-size: 2.4rem;
+    color: #fff;
+    text-align: center;
+}
+
+#saveScoreBtn {
+    border: none;
 }
